# bgmner_v2

./: .gitignore  README.md  pyproject.toml
configs/: train.20ep.json  train.default.json  train.mmBERT-small.json
data/ner_data/: dev.txt  labels.txt  train.txt
doc/: 01-quickstart.md  02-architecture.md  03-environment.md  04-dataset.md  05-training.md  06-inference.md  07-onnx-export-quant-eval.md  08-web-api.md  09-benchmark.md  10-rust-service.md  11-deployment-and-release.md  12-troubleshooting.md  13-cli-reference.md  README.md
rust/: Cargo.toml  README.md
rust/src/: api.rs  batch.rs  bio.rs  engine.rs  lib.rs  main.rs  provider.rs  types.rs
scripts/: analyze_word_coverage.py  benchmark_api_batch.py  compare_eval_protocols.py  diagnose_onnx_vs_hf.py  install_torch_rocm_win_amd.ps1  sync_dataset.py
src/bgmner_bert/: api.py  benchmark.py  bio_decode.py  config.py  data.py  download_backbone.py  eval_onnx.py  export_onnx.py  inference_utils.py  metrics.py  onnx_predict.py  onnx_runtime.py  predict.py  quantize_int8.py  train.py
tests/: test_api.py  test_benchmark.py  test_bio_decode.py  test_data_alignment.py  test_device_resolution.py  test_export_onnx_helpers.py  test_onnx_parity.py  test_onnx_runtime.py  test_quantize_int8.py  test_train_config_json.py
