[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgmner-bert"
version = "0.1.0"
description = "Modern NER pipeline for bgm data with BERT-like backbones and AutoModelForTokenClassification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.41,<5.0",
  "accelerate>=1.0",
  "seqeval>=1.2.2",
  "numpy>=1.24",
  "sentencepiece>=0.1.99",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "onnxscript>=0.3",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.scripts]
bgmner-download-backbone = "bgmner_bert.download_backbone:main"
bgmner-train = "bgmner_bert.train:main"
bgmner-predict = "bgmner_bert.predict:main"
bgmner-export-onnx = "bgmner_bert.export_onnx:main"
bgmner-onnx-predict = "bgmner_bert.onnx_predict:main"
bgmner-quantize-int8 = "bgmner_bert.quantize_int8:main"
bgmner-eval-onnx = "bgmner_bert.eval_onnx:main"
bgmner-api = "bgmner_bert.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
